relations_procmacro/tests/03-non-supported-argument.stderr
error: proc-macro derive panicked
 --> $DIR/03-non-supported-argument.rs:8:10
  |
8 | #[derive(GetCorresponding)]
  |          ^^^^^^^^^^^^^^^^
  |
  = help: message: Only `key = "value"` attributes supported.
